# python-project-52

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
labels/: tests.py  views.py
labels/locale/ru/LC_MESSAGES/: django.po
task_manager/: settings.py  urls.py  views.py
task_manager/apps/: __init__.py
task_manager/apps/labels/: tests.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py
task_manager/apps/statuses/: tests.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/tasks/: models.py  tests.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_name.py
task_manager/apps/users/: forms.py  tests.py  urls.py  views.py
task_manager/apps/users/migrations/: 0001_initial.py
